src/objects/CventEvents__CventConnection__c.object
<CustomObject>
    <description>Stores the Cvent connections history.</description>
    <fields>
        <fullName>CventEvents__AccessToken__c</fullName>
        <description>Stores the access token obtained during OAuth 2.0 flow.</description>
        <inlineHelpText>Stores the access token obtained during OAuth 2.0 flow.</inlineHelpText>
        <label>Access Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__AccountName__c</fullName>
        <description>Stores the name of Cvent account.</description>
        <inlineHelpText>Stores the name of Cvent account.</inlineHelpText>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__AccountNumber__c</fullName>
        <description>Stores the environment-level-unique Cvent account identifier.</description>
        <inlineHelpText>Stores the environment-level-unique Cvent account identifier.</inlineHelpText>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ConfigurationId__c</fullName>
        <description>Stores the unique identifier of the selected Cvent configuration.</description>
        <inlineHelpText>Stores the unique identifier of the selected Cvent configuration.</inlineHelpText>
        <label>Configuration Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ConnectedBy__c</fullName>
        <description>Stores the full name of the person who selected the Cvent configuration.</description>
        <inlineHelpText>Stores the full name of the person who selected the Cvent configuration.</inlineHelpText>
        <label>Connected By</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ConnectedDate__c</fullName>
        <description>Stores the date and time the Cvent configuration was selected.</description>
        <inlineHelpText>Stores the date and time the Cvent configuration was selected.</inlineHelpText>
        <label>Connected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__EnvironmentName__c</fullName>
        <description>Stores the environment name which the target account belongs to.</description>
        <inlineHelpText>Stores the environment name which the target account belongs to.</inlineHelpText>
        <label>Environment Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows which connection is currently in use. There might be only one active connection in a time.</description>
        <inlineHelpText>Shows which connection is currently in use. There might be only one active connection in a time.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__LicenseType__c</fullName>
        <description>Stores the license type of Cvent account.</description>
        <inlineHelpText>Stores the license type of Cvent account.</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Data Connector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__RefreshToken__c</fullName>
        <description>Stores the refresh token obtained during OAuth 2.0 flow.</description>
        <inlineHelpText>Stores the refresh token obtained during OAuth 2.0 flow.</inlineHelpText>
        <label>Refresh Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Cvent Connection</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__IsActive__c</columns>
        <columns>CventEvents__AccountName__c</columns>
        <columns>CventEvents__EnvironmentName__c</columns>
        <columns>CventEvents__ConfigurationId__c</columns>
        <columns>CventEvents__ConnectedBy__c</columns>
        <columns>CventEvents__ConnectedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Cvent Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Connection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>